intear-dex-management/tests/snapshots/views__xyk_pool_show_3.snap
---
source: intear-dex-management/tests/views.rs
expression: "cli.view(&[\"xyk\", \"pool\", \"show\", pool_id])"
---
$ near-intear-dex-management xyk pool show 3 network-config sandbox now
exit code: 0
--- stdout ---
Pool               #3 on slimedragon.near/xyk
Kind               launch
Pair               NEAR / INTEL
Assets             near / nep141:intel.tkn.near
Reserves           10 NEAR / 5,000,000 INTEL
Phantom liquidity  10 NEAR
Fees now           0% (protocol 0%)
Fee configuration  none
Upgrade available  no
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management xyk pool show 3 network-config sandbox now
