intear-dex-management/tests/snapshots/views__xyk_pools_count_json.snap
---
source: intear-dex-management/tests/views.rs
expression: "cli.view(&[\"--json\", \"xyk\", \"pools\", \"count\"])"
---
$ near-intear-dex-management --json xyk pools count network-config sandbox now
exit code: 0
--- stdout ---
{
  "dex_id": "slimedragon.near/xyk",
  "pool_count": 4
}
--- stderr ---

Here is your console command if you need to script it or re-run:
    near intear-dex-management --json xyk pools count network-config sandbox now
